--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
-    <title>SPY PARTY</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Rubik+Mono+One&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <title>SPY // MONITORING SYSTEM</title>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500;800&display=swap" rel="stylesheet">
 </head>
-<body style="margin: 0; background: #FFF5E1;">
+<body style="margin: 0; background: #000;">
     <div id="root"></div>
 </body>
 </html>
